deploy/staging/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grc-app
  template:
    metadata:
      labels:
        app: grc-app
    spec:
      containers:
      - name: grc-app
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/pet/grc-preprod-ecr:grc-app-latest
        ports:
        - containerPort: 3000
      imagePullPolicy: Always
