deploy/staging/grc-clamav-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grc-clamav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grc-clamav
  template:
    metadata:
      labels:
        app: grc-clamav
    spec:
      securityContext:
        runAsUser: 100
        runAsGroup: 100
        fsGroup: 100
      containers:
      - name: grc-clamav
        image: docker.io/clamav/clamav:clamav-0.105.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3310
      imagePullSecrets:
        - name: docker-hub-creds
