deploy/staging/grc-clamav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grc-clamav-service
  labels:
    app: grc-clamav-service
spec:
  ports:
  - port: 3310
    name: clamav
    targetPort: 3310
  selector:
    app: grc-clamav
