deploy/staging/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service-admin
  namespace: grc-preprod
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "194.33.196.0/24, 194.33.192.0/24, 81.134.202.29/32, 37.200.119.11/32, 185.10.12.32/28, 176.65.68.112/28, 2a00:1430:2106::/48"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "{\"msg\":\"<br/>Gender Recognition Panel<br/>This is a restricted page. Please contact by email or telephone if you need access<br/>GRPenquiries@justice.gov.uk<br>Telephone: 0300 123 4503  Monday to Friday, 9am to 5pm<br/>\"}";
      }
      error_page 403 @custom_403;
    #nginx.ingress.kubernetes.io/custom-http-errors: "403" |
    #  error_page 403 /403.html;
    #  location /403.html {
    #      return 403 '{"error": {"status_code": 403,"status": "Not allowed buddy"}}';
    #  }
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-admin-grc-preprod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - preprod.admin.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-service-admin-secret

  rules:
  - host: preprod.admin.gender-recognition.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-admin-service
                port: 
                  number: 3001
