deploy/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gender-recognition-service
  namespace: grc-preprod
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: gender-recognition-service-grc-preprod-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecDefaultAction "phase:2,pass,log,tag:github_team=pet"
      SecRule REQUEST_URI "@beginsWith /upload" \
        "id:1000,\
        phase:1,\
        pass,\
        nolog,\
        ctl:ruleRemoveById=951240"
    nginx.ingress.kubernetes.io/server-snippet: |
      location @custom_403 {
        return 403 "<h1>There is a problem:</h1><br><h3>Go back to the previous page using the back arrow and enter valid content</h3>";
      }
      error_page 403 @custom_403;
spec:
  ingressClassName: modsec
  tls:
  - hosts:
    - preprod.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-service-app-secret
  - hosts:
    - preprod.dashboard.gender-recognition.service.justice.gov.uk
    secretName: gender-recognition-dashboard-secret

  rules:
  - host: preprod.gender-recognition.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-app-service
                port: 
                  number: 3000

  - host: preprod.dashboard.gender-recognition.service.justice.gov.uk
    http:
      paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grc-dashboard-service
                port: 
                  number: 3002
