deploy/staging/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping-grc-preprod
  namespace: grc-preprod
spec:
  podSelector:
    matchLabels:
      app: grc-preprod
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
